[tool.poetry]
name = "celery-heimdall"
version = "1.0.1"
description = "Helpful celery extensions."
authors = ["Tyler Kennedy <tk@tkte.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tktech/celery-heimdall"
repository = "https://github.com/tktech/celery-heimdall"

[tool.poetry.dependencies]
python = "^3.8"
celery = "*"
redis = "*"
click = {version = "*", optional = true}
SQLAlchemy = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
bumpversion = "^0.6.0"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
black = "^23.9.1"

[tool.poetry.extras]
inspector = ["click", "sqlalchemy"]

[tool.poetry.scripts]
heimdall-inspector = "celery_heimdall.contrib.inspector.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
